# snowman_challenge

./: .bumpversion.cfg  Dockerfile  Makefile  README.rst  pyproject.toml  pytest.ini  run.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
snowman_challenge/: __init__.py  app.py  auth.py  config.py  consts.py  database.py  exceptions.py  logic.py  models.py
snowman_challenge/api/v1/: __init__.py  resources.py  views.py
tests/: __init__.py  conftest.py  test_auth.py  test_logic.py  test_snowman_challenge.py
tests/api/v1/: test_resources.py  test_views.py
