
[tool.poetry]
name = "snowman_challenge"
version = "0.1.0"
description = "Backend Challenge"
authors = ["Fred Campos <fred.tecnologia@gmail.com>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "snowman_challenge" },
]
keywords=['snowman_challenge']
readme='README.rst'


[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
flask-cors = "^3.0.8"
flask-jwt = "^0.3.2"
passlib = "^1.7.2"
sqlalchemy = "^1.3.18"
mixer = "^6.1.3"
sqlalchemy-utils = "^0.36.8"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
bump2version = "^0.5.11"

cohesion = "^1.0.0"
darglint = "^1.3.0"
dlint = "^0.10.3"
epc = "^0.0.5"
flake8-cognitive-complexity = "^0.0.2"
flake8-executable = "^2.0.3"
flake8-expression-complexity = "^0.0.7"
flake8-functions = "^0.0.4"
flake8-logging-format = "^0.6.0"
flake8-mock = "^0.3"
flake8-pie = "^0.5.0"
flake8-pytest-style = "^1.1.1"
flake8-variables-names = "^0.0.3"
importmagic3 = "^0.2.0"
ipython = "^7.14.0"
monkeytype = "^20.4.2"
mypy = "^0.770"
pip = "^20.1.0"
py-make = "^0.1.1"
pylint = "^2.5.2"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"

sphinx = "^1.8.5"
tox = "^3.14.6"
watchdog = "^0.9.0"
wemake-python-styleguide = "^0.14.0"
pytest-env = "^0.6.2"
mixer = "^6.1.3"


[tool.black]
line-length = 100
skip-string-normalization = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
